--- a/Zelda/Zelda.vbproj
+++ b/Zelda/Zelda.vbproj
@@ -175,6 +175,9 @@
   <ItemGroup>
     <None Include="Resources\ic_delete1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="sql\Zelda.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
